[gd_scene load_steps=5 format=2]

[ext_resource path="res://font_s28.tres" type="DynamicFont" id=1]
[ext_resource path="res://Fonts/ARIAL.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Menus/Misc/MsgDev.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 18
use_filter = true
font_data = ExtResource( 2 )

[node name="MsgDev" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 107.0
margin_top = 46.0
margin_right = 1205.0
margin_bottom = 685.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1091.0
margin_bottom = 632.0

[node name="name" type="LineEdit" parent="PanelContainer/Panel"]
anchor_left = 0.275
anchor_top = 0.086
anchor_right = 0.665
anchor_bottom = 0.162
margin_left = 0.899994
margin_top = -0.75
margin_right = 1.13995
margin_bottom = -1.25
custom_fonts/font = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelContainer/Panel/name"]
anchor_left = -0.604
anchor_right = -0.197
anchor_bottom = 0.787
margin_left = -0.0355072
margin_right = -0.196526
margin_bottom = 0.0109978
custom_fonts/font = ExtResource( 1 )
text = "Your Name"

[node name="subject" type="LineEdit" parent="PanelContainer/Panel"]
anchor_left = 0.276
anchor_top = 0.218
anchor_right = 0.665
anchor_bottom = 0.293
margin_left = -0.184021
margin_top = -0.187805
margin_right = 1.13995
margin_bottom = -0.0628204
custom_fonts/font = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelContainer/Panel/subject"]
anchor_left = -0.604
anchor_right = -0.197
anchor_bottom = 0.787
margin_left = -0.0355072
margin_right = -0.196526
margin_bottom = 0.0109978
custom_fonts/font = ExtResource( 1 )
text = "Subject"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="message" type="TextEdit" parent="PanelContainer/Panel"]
anchor_left = 0.04
anchor_top = 0.363
anchor_right = 0.924
anchor_bottom = 0.851
margin_left = -0.360004
margin_top = 0.125
margin_right = 0.383972
margin_bottom = 0.125
custom_fonts/font = SubResource( 1 )
text = "**Your Message**"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="send" type="Button" parent="PanelContainer/Panel"]
anchor_left = 0.787
anchor_top = 0.886
anchor_right = 0.924
anchor_bottom = 0.974
margin_left = -0.108093
margin_top = 0.25
margin_right = 0.383972
margin_bottom = 0.25
custom_fonts/font = ExtResource( 1 )
text = "SEND"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="status" type="PanelContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -65.0
margin_right = 256.0
margin_bottom = 65.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="status"]
margin_left = 7.0
margin_top = 7.0
margin_right = 505.0
margin_bottom = 123.0

[node name="Label" type="Label" parent="status/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -224.5
margin_top = -19.5
margin_right = 224.5
margin_bottom = 19.5
custom_fonts/font = ExtResource( 1 )
text = "Uploading... (my server is slow)"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_entered" from="PanelContainer/Panel/name" to="." method="_on_name_text_entered"]
[connection signal="text_entered" from="PanelContainer/Panel/subject" to="." method="_on_subject_text_entered"]
[connection signal="pressed" from="PanelContainer/Panel/send" to="." method="_on_send_pressed"]
